move links into card